--- a/iPhoneMainWindow.xib
+++ b/iPhoneMainWindow.xib
@@ -87,7 +87,7 @@
             </connections>
             <point key="canvasLocation" x="521" y="-1006"/>
         </viewController>
-        <viewController id="76" userLabel="File view" customClass="OzyRotatableViewController">
+        <viewController id="76" userLabel="File view" customClass="FileDataViewController">
             <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="79">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -471,7 +471,7 @@
             </connections>
             <point key="canvasLocation" x="59" y="-173"/>
         </viewController>
-        <viewController title="File error" id="424" userLabel="Parse error" customClass="OzyTextViewController">
+        <viewController title="File error" id="424" userLabel="Parse error" customClass="ParseErrorViewController">
             <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="425">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -493,13 +493,7 @@
                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             </view>
             <extendedEdge key="edgesForExtendedLayout"/>
-            <navigationItem key="navigationItem" title="File Error" id="426">
-                <barButtonItem key="rightBarButtonItem" title="Toggle Info" id="442">
-                    <connections>
-                        <action selector="toggleShowingRawString:" destination="14" id="443"/>
-                    </connections>
-                </barButtonItem>
-            </navigationItem>
+            <navigationItem key="navigationItem" title="File Error" id="426"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <connections>
                 <outlet property="_contentView" destination="643" id="644"/>
